--- a/CSV Upload Notebook.ipynb
+++ b/CSV Upload Notebook.ipynb
@@ -2,16 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "a8c64576-e445-4b8f-b43a-1998e7725487",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sqlalchemy\n",
-    "from sqlalchemy import create_engine, inspect, text\n",
+    "from sqlalchemy import create_engine, text, inspect, func\n",
     "\n",
+    "# ORM imports\n",
+    "import sqlalchemy\n",
+    "from sqlalchemy.ext.automap import automap_base\n",
+    "from sqlalchemy import Column, Integer, String, Float, Boolean\n",
+    "from sqlalchemy.orm import Session\n",
+    "from sqlalchemy.ext.declarative import declarative_base\n",
+    "\n",
+    "# API\n",
+    "import requests\n",
+    "import json\n",
+    "\n",
+    "# Data Science and Visualization\n",
     "import pandas as pd\n",
-    "import numpy as np"
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import seaborn as sns\n",
+    "from scipy import stats\n",
+    "import datetime as dt"
    ]
   },
   {
@@ -162,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "bac233b7-65d3-4f28-9e88-3ce13a6141d9",
    "metadata": {},
    "outputs": [
@@ -195,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "0f21ffde-dd20-47b9-a9f2-4bd86b6c0ca8",
    "metadata": {},
    "outputs": [
@@ -312,7 +327,7 @@
        "4     Finnish  http://en.wikipedia.org/wiki/Heikki_Kovalainen  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "a2b23cd1-be70-4594-9c61-09876ccf3e91",
    "metadata": {},
    "outputs": [
@@ -471,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "563096ae-1efe-4dfb-8679-69280ba4bb60",
    "metadata": {},
    "outputs": [
@@ -501,6 +516,142 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "c9c49fa8-9943-4503-a278-38db10f76abe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>constructorId</th>\n",
+       "      <th>constructorRef</th>\n",
+       "      <th>name</th>\n",
+       "      <th>nationality</th>\n",
+       "      <th>url</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>mclaren</td>\n",
+       "      <td>McLaren</td>\n",
+       "      <td>British</td>\n",
+       "      <td>http://en.wikipedia.org/wiki/McLaren</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>bmw_sauber</td>\n",
+       "      <td>BMW Sauber</td>\n",
+       "      <td>German</td>\n",
+       "      <td>http://en.wikipedia.org/wiki/BMW_Sauber</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>williams</td>\n",
+       "      <td>Williams</td>\n",
+       "      <td>British</td>\n",
+       "      <td>http://en.wikipedia.org/wiki/Williams_Grand_Pr...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>renault</td>\n",
+       "      <td>Renault</td>\n",
+       "      <td>French</td>\n",
+       "      <td>http://en.wikipedia.org/wiki/Renault_in_Formul...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>toro_rosso</td>\n",
+       "      <td>Toro Rosso</td>\n",
+       "      <td>Italian</td>\n",
+       "      <td>http://en.wikipedia.org/wiki/Scuderia_Toro_Rosso</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   constructorId constructorRef        name nationality  \\\n",
+       "0              1        mclaren     McLaren     British   \n",
+       "1              2     bmw_sauber  BMW Sauber      German   \n",
+       "2              3       williams    Williams     British   \n",
+       "3              4        renault     Renault      French   \n",
+       "4              5     toro_rosso  Toro Rosso     Italian   \n",
+       "\n",
+       "                                                 url  \n",
+       "0               http://en.wikipedia.org/wiki/McLaren  \n",
+       "1            http://en.wikipedia.org/wiki/BMW_Sauber  \n",
+       "2  http://en.wikipedia.org/wiki/Williams_Grand_Pr...  \n",
+       "3  http://en.wikipedia.org/wiki/Renault_in_Formul...  \n",
+       "4   http://en.wikipedia.org/wiki/Scuderia_Toro_Rosso  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#CSV import for constructor table\n",
+    "filepath4 = \"Datasets/constructors.csv\"\n",
+    "df_constructor = pd.read_csv(filepath4)\n",
+    "df_constructor.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "e484850a-abf5-4d48-827e-8665b74b5440",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 212 entries, 0 to 211\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column          Non-Null Count  Dtype \n",
+      "---  ------          --------------  ----- \n",
+      " 0   constructorId   212 non-null    int64 \n",
+      " 1   constructorRef  212 non-null    object\n",
+      " 2   name            212 non-null    object\n",
+      " 3   nationality     212 non-null    object\n",
+      " 4   url             212 non-null    object\n",
+      "dtypes: int64(1), object(4)\n",
+      "memory usage: 8.4+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_constructor.info()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "6aa8bfb5-436f-4d08-98dc-94fc0a8cee6a",
    "metadata": {},
@@ -510,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "792cfbce-ebf8-4cb1-bf13-e90637521ed0",
    "metadata": {},
    "outputs": [],
@@ -523,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "id": "08bd7136-6256-4472-bce2-1579a26fafbd",
    "metadata": {},
    "outputs": [
@@ -613,15 +764,15 @@
        "</div>"
       ],
       "text/plain": [
-       "   driverId   driverRef number  forename     surname        dob nationality\n",
-       "0         1    hamilton     44     Lewis    Hamilton 1985-01-07     British\n",
-       "1         2    heidfeld     \\N      Nick    Heidfeld 1977-05-10      German\n",
-       "2         3     rosberg      6      Nico     Rosberg 1985-06-27      German\n",
-       "3         4      alonso     14  Fernando      Alonso 1981-07-29     Spanish\n",
-       "4         5  kovalainen     \\N    Heikki  Kovalainen 1981-10-19     Finnish"
+       "   driverId   driverRef number  forename     surname         dob nationality\n",
+       "0         1    hamilton     44     Lewis    Hamilton  1985-01-07     British\n",
+       "1         2    heidfeld     \\N      Nick    Heidfeld  1977-05-10      German\n",
+       "2         3     rosberg      6      Nico     Rosberg  1985-06-27      German\n",
+       "3         4      alonso     14  Fernando      Alonso  1981-07-29     Spanish\n",
+       "4         5  kovalainen     \\N    Heikki  Kovalainen  1981-10-19     Finnish"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -638,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "id": "3c1410d2-5e12-4c3d-874b-f7cf364fbf9e",
    "metadata": {},
    "outputs": [
@@ -671,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "id": "d1d2ad79-32ca-4187-900c-45a454109127",
    "metadata": {},
    "outputs": [
@@ -693,7 +844,7 @@
        "Name: count, Length: 109, dtype: int64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -702,6 +853,98 @@
     "# Checking value counts for df_standings['positionText']\n",
     "\n",
     "df_standings['positionText'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "7ad0f3a9-27af-4173-9c3f-d0d8bdc56982",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>constructorId</th>\n",
+       "      <th>constructorRef</th>\n",
+       "      <th>name</th>\n",
+       "      <th>nationality</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>mclaren</td>\n",
+       "      <td>McLaren</td>\n",
+       "      <td>British</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>bmw_sauber</td>\n",
+       "      <td>BMW Sauber</td>\n",
+       "      <td>German</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>williams</td>\n",
+       "      <td>Williams</td>\n",
+       "      <td>British</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>renault</td>\n",
+       "      <td>Renault</td>\n",
+       "      <td>French</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>toro_rosso</td>\n",
+       "      <td>Toro Rosso</td>\n",
+       "      <td>Italian</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   constructorId constructorRef        name nationality\n",
+       "0              1        mclaren     McLaren     British\n",
+       "1              2     bmw_sauber  BMW Sauber      German\n",
+       "2              3       williams    Williams     British\n",
+       "3              4        renault     Renault      French\n",
+       "4              5     toro_rosso  Toro Rosso     Italian"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_constructor.drop('url', axis=1, inplace=True)\n",
+    "df_constructor.head()"
    ]
   },
   {
@@ -714,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "id": "a453ded0-b108-4171-ab6f-f26169c02538",
    "metadata": {},
    "outputs": [
@@ -760,7 +1003,7 @@
        "Name: country, dtype: int64"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -775,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 17,
    "id": "79c8f1f9-6527-4ab6-ab10-c9fd99c8ba14",
    "metadata": {},
    "outputs": [
@@ -828,7 +1071,7 @@
        "Name: nationality, dtype: int64"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -842,44 +1085,98 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "72535979-83c7-4648-9a11-c83efa2e239d",
+   "cell_type": "markdown",
+   "id": "e7a9af29-1c6f-49f7-b1fd-26031b3f9136",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "SQL Lite Related"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "8ba89687-3ab9-4a18-90c5-edc87acaac05",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Create engine using the `spacex.sqlite` database file\n",
+    "engine = create_engine(\"sqlite:///f1.sqlite\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "9578f30f-82ab-4846-ba2f-11d201642eb5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# SOURCE = df_circuits\n",
+    "# TARGET = circuits"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "cae7b1d7-0228-4643-a9af-7d12e65ac0b3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def SQL_CREATE_STATEMENT_FROM_DATAFRAME(SOURCE, TARGET):\n",
+    "\n",
+    "    sql_text = pd.io.sql.get_schema(SOURCE.reset_index(), TARGET)   \n",
+    "    return sql_text"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
+   "id": "39deeef8-81fc-4fd7-9061-bc2541c987a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CREATE TABLE \"circuits\" (\n",
+      "\"index\" INTEGER,\n",
+      "  \"circuitId\" INTEGER,\n",
+      "  \"circuitRef\" TEXT,\n",
+      "  \"name\" TEXT,\n",
+      "  \"location\" TEXT,\n",
+      "  \"country\" TEXT,\n",
+      "  \"lat\" REAL,\n",
+      "  \"lng\" REAL,\n",
+      "  \"alt\" INTEGER,\n",
+      "  \"url\" TEXT\n",
+      ")\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (pd.io.sql.get_schema(df_circuits.reset_index(), 'circuits'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "id": "273b2474-2d63-4c4b-945c-ee35d77b2eba",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'sql_text' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[22], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(\u001b[43msql_text\u001b[49m))\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'sql_text' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "print('\\n\\n'.join(sql_text))"
+   ]
   },
   {
    "cell_type": "code",
