Added some sources

--- a/CSV Upload Notebook.ipynb
+++ b/CSV Upload Notebook.ipynb
@@ -1865,6 +1865,7 @@
    ],
    "source": [
     "# Get schema for each table\n",
+    "# Gotten from: https://stackoverflow.com/a/31075679\n",
     "print(pd.io.sql.get_schema(df_circuits.reset_index(), 'circuits'))\n",
     "print(pd.io.sql.get_schema(df_drivers.reset_index(), 'drivers'))\n",
     "print(pd.io.sql.get_schema(df_constructor.reset_index(), 'constructors'))\n",
@@ -1880,31 +1881,9 @@
    "outputs": [],
    "source": [
     "# Connect to database with SQLite\n",
+    "# Creating the tables was done with help from: https://www.geeksforgeeks.org/python-sqlite-create-table/\n",
     "conn = sqlite3.connect('f1.sqlite')\n",
     "cursor = conn.cursor()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 133,
-   "id": "6e113296-f66d-43f1-a414-f906335fc886",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<sqlite3.Cursor at 0x1ce4fab2740>"
-      ]
-     },
-     "execution_count": 133,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Drop tables if they exist\n",
-    "cursor.execute(\"DROP TABLE IF EXISTS RACES\")\n",
-    "cursor.execute(\"DROP TABLE IF EXISTS RESULTS\")"
    ]
   },
   {
