Added EDA Notebook

--- a/CSV Upload Notebook.ipynb
+++ b/CSV Upload Notebook.ipynb
@@ -1792,7 +1792,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create engine using the `spacex.sqlite` database file\n",
+    "# Create engine using the `f1.sqlite` database file\n",
     "engine = create_engine(\"sqlite:///f1.sqlite\")"
    ]
   },
@@ -2133,7 +2133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 157,
    "id": "9356ec1f-ad19-40d5-b61f-0f86fdc4fe3d",
    "metadata": {},
    "outputs": [],
@@ -2144,126 +2144,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
-   "id": "96d85514-97f9-44e3-afb4-d0261c9be841",
+   "execution_count": 158,
+   "id": "a0a0c058-aeaa-4977-8dff-7171879b7746",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['results', 'circuits', 'constructors', 'drivers', 'races']"
-      ]
-     },
-     "execution_count": 155,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Create a base using `automap_base()` for reflection\n",
-    "Base = automap_base()\n",
-    "\n",
-    "# Use the Base class to reflect the tables in the Hawaii Database\n",
-    "Base.prepare(autoload_with=engine)\n",
-    "\n",
-    "# Print all of the classes mapped to the Base\n",
-    "Base.classes.keys()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e15a26df-57e8-4c20-a3bd-a4d5ceb18205",
-   "metadata": {},
-   "source": [
-    "## Load Tables into SQLite Database"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 156,
-   "id": "aa2615da-53e7-4e2a-8068-3ef9755a3f11",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "circuits\n",
-      "-----------\n",
-      "circuitId INTEGER\n",
-      "circuitRef TEXT\n",
-      "name TEXT\n",
-      "location TEXT\n",
-      "country TEXT\n",
-      "lat REAL\n",
-      "lng REAL\n",
-      "alt INTEGER\n",
-      "\n",
-      "constructors\n",
-      "-----------\n",
-      "constructorId INTEGER\n",
-      "constructorRef TEXT\n",
-      "name TEXT\n",
-      "nationality TEXT\n",
-      "\n",
-      "drivers\n",
-      "-----------\n",
-      "driverId INTEGER\n",
-      "driverRef TEXT\n",
-      "number TEXT\n",
-      "forename TEXT\n",
-      "surname TEXT\n",
-      "dob TIMESTAMP\n",
-      "nationality TEXT\n",
-      "\n",
-      "races\n",
-      "-----------\n",
-      "raceId INTEGER\n",
-      "year INTEGER\n",
-      "round INTEGER\n",
-      "circuitId INTEGER\n",
-      "name TEXT\n",
-      "date TEXT\n",
-      "time TEXT\n",
-      "\n",
-      "results\n",
-      "-----------\n",
-      "resultId INTEGER\n",
-      "raceId INTEGER\n",
-      "driverId INTEGER\n",
-      "constructorId INTEGER\n",
-      "number TEXT\n",
-      "grid INTEGER\n",
-      "position TEXT\n",
-      "positionText TEXT\n",
-      "positionOrder INTEGER\n",
-      "points REAL\n",
-      "laps INTEGER\n",
-      "rank TEXT\n",
-      "statusId INTEGER\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Inspect\n",
-    "# Create the inspector and connect it to the engine\n",
-    "inspector = inspect(engine)\n",
-    "\n",
-    "# Collect the names of tables within the database\n",
-    "tables = inspector.get_table_names()\n",
-    "\n",
-    "# print metadata for each table\n",
-    "for table in tables:\n",
-    "    print(table)\n",
-    "    print(\"-----------\")\n",
-    "    \n",
-    "    # get columns\n",
-    "    columns = inspector.get_columns(table)\n",
-    "    for column in columns:\n",
-    "        print(column[\"name\"], column[\"type\"])\n",
-    "\n",
-    "    print()"
+    "# End the engine\n",
+    "engine.dispose()"
    ]
   }
  ],
