Updated CSV Upload

--- a/CSV Upload Notebook.ipynb
+++ b/CSV Upload Notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 1,
    "id": "a8c64576-e445-4b8f-b43a-1998e7725487",
    "metadata": {},
    "outputs": [],
@@ -172,13 +172,13 @@
    "source": [
     "#CSV import for circuits table\n",
     "filepath = \"Datasets/circuits.csv\"\n",
-    "df_circuits = pd.read_csv(filepath)\n",
+    "df_circuits = pd.read_csv(filepath, encoding=\"UTF-8\")\n",
     "df_circuits.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "0f21ffde-dd20-47b9-a9f2-4bd86b6c0ca8",
    "metadata": {},
    "outputs": [
@@ -295,7 +295,7 @@
        "4     Finnish  http://en.wikipedia.org/wiki/Heikki_Kovalainen  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,13 +303,13 @@
    "source": [
     "#CSV import for drivers table\n",
     "filepath2 = \"Datasets/drivers.csv\"\n",
-    "df_drivers = pd.read_csv(filepath2)\n",
+    "df_drivers = pd.read_csv(filepath2, encoding=\"UTF-8\")\n",
     "df_drivers.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "811dce9b-f55d-40ea-9715-da2b9fb7647c",
    "metadata": {},
    "outputs": [
@@ -407,7 +407,7 @@
        "4                  5      18         5     4.0         5            5     0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,13 +415,13 @@
    "source": [
     "#CSV import for standings table\n",
     "filepath3 = \"Datasets/driver_standings.csv\"\n",
-    "df_standings = pd.read_csv(filepath3)\n",
+    "df_standings = pd.read_csv(filepath3, encoding=\"UTF-8\")\n",
     "df_standings.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "c9c49fa8-9943-4503-a278-38db10f76abe",
    "metadata": {},
    "outputs": [
@@ -514,7 +514,7 @@
        "4   http://en.wikipedia.org/wiki/Scuderia_Toro_Rosso  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,13 +522,13 @@
    "source": [
     "#CSV import for constructor table\n",
     "filepath4 = \"Datasets/constructors.csv\"\n",
-    "df_constructor = pd.read_csv(filepath4)\n",
+    "df_constructor = pd.read_csv(filepath4, encoding=\"UTF-8\")\n",
     "df_constructor.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 6,
    "id": "1c370bf6-f4d7-4c2e-9e34-08cd8ac66da4",
    "metadata": {},
    "outputs": [
@@ -706,7 +706,7 @@
        "4         43    1       1:27.418         218.385         1  "
       ]
      },
-     "execution_count": 143,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -714,13 +714,13 @@
    "source": [
     "#CSV import for results table\n",
     "filepath5 = \"Datasets/results.csv\"\n",
-    "df_results = pd.read_csv(filepath5)\n",
+    "df_results = pd.read_csv(filepath5, encoding=\"UTF-8\")\n",
     "df_results.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 7,
    "id": "f65dae24-30be-42cf-a19f-38415f8247a5",
    "metadata": {},
    "outputs": [
@@ -905,7 +905,7 @@
        "4          \\N          \\N  "
       ]
      },
-     "execution_count": 77,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -913,7 +913,7 @@
    "source": [
     "#CSV import for races table\n",
     "filepath6 = \"Datasets/races.csv\"\n",
-    "df_races = pd.read_csv(filepath6)\n",
+    "df_races = pd.read_csv(filepath6, encoding=\"UTF-8\")\n",
     "df_races.head()"
    ]
   },
@@ -927,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "792cfbce-ebf8-4cb1-bf13-e90637521ed0",
    "metadata": {},
    "outputs": [
@@ -1038,7 +1038,7 @@
        "4     Turkey  40.95170   29.40500  130  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1055,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "08bd7136-6256-4472-bce2-1579a26fafbd",
    "metadata": {},
    "outputs": [
@@ -1153,7 +1153,7 @@
        "4         5  kovalainen     \\N    Heikki  Kovalainen  1981-10-19     Finnish"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1170,7 +1170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "3c1410d2-5e12-4c3d-874b-f7cf364fbf9e",
    "metadata": {},
    "outputs": [
@@ -1203,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 11,
    "id": "4d27f8a8-d29c-44bf-a46f-898766589ad7",
    "metadata": {},
    "outputs": [
@@ -1301,7 +1301,7 @@
        "4       5  2009      5          4     Spanish Grand Prix  2009-05-10  12:00:00"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1318,7 +1318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 12,
    "id": "31e439b8-84d0-48c5-b969-d62e9d0de929",
    "metadata": {},
    "outputs": [
@@ -1459,7 +1459,7 @@
        "4            5              5     4.0    58    1         1  "
       ]
      },
-     "execution_count": 144,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1476,7 +1476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 13,
    "id": "672cb94d-555a-48d5-bf1c-49f8317b6fe0",
    "metadata": {},
    "outputs": [
@@ -1515,7 +1515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "d1d2ad79-32ca-4187-900c-45a454109127",
    "metadata": {},
    "outputs": [
@@ -1537,7 +1537,7 @@
        "Name: count, Length: 109, dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1550,7 +1550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "7ad0f3a9-27af-4173-9c3f-d0d8bdc56982",
    "metadata": {},
    "outputs": [
@@ -1630,7 +1630,7 @@
        "4              5     toro_rosso  Toro Rosso     Italian"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1650,7 +1650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "a453ded0-b108-4171-ab6f-f26169c02538",
    "metadata": {},
    "outputs": [
@@ -1696,7 +1696,7 @@
        "Name: country, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1711,7 +1711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "79c8f1f9-6527-4ab6-ab10-c9fd99c8ba14",
    "metadata": {},
    "outputs": [
@@ -1764,7 +1764,7 @@
        "Name: nationality, dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1787,7 +1787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 18,
    "id": "8ba89687-3ab9-4a18-90c5-edc87acaac05",
    "metadata": {},
    "outputs": [],
@@ -1798,7 +1798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 19,
    "id": "39deeef8-81fc-4fd7-9061-bc2541c987a9",
    "metadata": {},
    "outputs": [
@@ -1875,7 +1875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 20,
    "id": "e575e78b-666f-470e-9c9f-094bfbfa3f2c",
    "metadata": {},
    "outputs": [],
@@ -1888,7 +1888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 21,
    "id": "42d93d07-7c9c-4294-9b97-9679352ef82c",
    "metadata": {},
    "outputs": [
@@ -1905,7 +1905,7 @@
        "77"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1937,7 +1937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 22,
    "id": "19d0932a-1805-4128-b8f7-cb8b32a9f381",
    "metadata": {},
    "outputs": [
@@ -1954,7 +1954,7 @@
        "859"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1984,7 +1984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 23,
    "id": "56516006-9e64-4067-ae7e-08d1a476ac78",
    "metadata": {},
    "outputs": [
@@ -2001,7 +2001,7 @@
        "212"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2029,7 +2029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 24,
    "id": "d6d01e1e-912c-43e5-be8d-55664754b1dc",
    "metadata": {},
    "outputs": [
@@ -2046,7 +2046,7 @@
        "1125"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2078,7 +2078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 25,
    "id": "5fe23588-324a-46c3-9164-76a6b40d80ac",
    "metadata": {},
    "outputs": [
@@ -2095,7 +2095,7 @@
        "15591"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2133,7 +2133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 26,
    "id": "9356ec1f-ad19-40d5-b61f-0f86fdc4fe3d",
    "metadata": {},
    "outputs": [],
@@ -2144,7 +2144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 27,
    "id": "a0a0c058-aeaa-4977-8dff-7171879b7746",
    "metadata": {},
    "outputs": [],
