Added dataframe to EDA

--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -58,7 +58,7 @@
     {
      "data": {
       "text/plain": [
-       "['results', 'races', 'constructors', 'circuits', 'drivers']"
+       "['races', 'circuits', 'results', 'constructors', 'drivers']"
       ]
      },
      "execution_count": 3,
@@ -160,31 +160,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "17efd819-612a-4541-b8d8-8e8eb8cd6c8a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('José Froilán', 'González', 'Argentine', 2),\n",
-       " ('Carlos', 'Reutemann', 'Argentine', 12),\n",
-       " ('Juan', 'Fangio', 'Argentine', 24)]"
+       "[('José Froilán', 'González', 2),\n",
+       " ('Carlos', 'Reutemann', 12),\n",
+       " ('Juan', 'Fangio', 24)]"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>forename</th>\n",
+       "      <th>surname</th>\n",
+       "      <th>wins</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>José Froilán</td>\n",
+       "      <td>González</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Carlos</td>\n",
+       "      <td>Reutemann</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Juan</td>\n",
+       "      <td>Fangio</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       forename    surname  wins\n",
+       "0  José Froilán   González     2\n",
+       "1        Carlos  Reutemann    12\n",
+       "2          Juan     Fangio    24"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "nationality = 'Argentine'\n",
     "\n",
-    "driver_query = session.query(Drivers.forename, Drivers.surname, Drivers.nationality, func.count(Results.position)).\\\n",
+    "driver_query = session.query(Drivers.forename, Drivers.surname, func.count(Results.position)).\\\n",
     "filter(Drivers.driverId == Results.driverId).\\\n",
     "filter(Results.position==1).filter(Drivers.nationality == f\"{nationality}\").\\\n",
     "group_by(Drivers.forename, Drivers.surname).order_by(func.count(Results.position).asc()).all()\n",
     "\n",
-    "display(driver_query)"
+    "display(driver_query)\n",
+    "\n",
+    "df = pd.DataFrame(driver_query, columns=[\"forename\", \"surname\", \"wins\"])\n",
+    "d"
    ]
   },
   {
