--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "17efd819-612a-4541-b8d8-8e8eb8cd6c8a",
    "metadata": {},
    "outputs": [
@@ -174,66 +174,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>forename</th>\n",
-       "      <th>surname</th>\n",
-       "      <th>wins</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>José Froilán</td>\n",
-       "      <td>González</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Carlos</td>\n",
-       "      <td>Reutemann</td>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Juan</td>\n",
-       "      <td>Fangio</td>\n",
-       "      <td>24</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       forename    surname  wins\n",
-       "0  José Froilán   González     2\n",
-       "1        Carlos  Reutemann    12\n",
-       "2          Juan     Fangio    24"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -246,13 +186,12 @@
     "\n",
     "display(driver_query)\n",
     "\n",
-    "df = pd.DataFrame(driver_query, columns=[\"forename\", \"surname\", \"wins\"])\n",
-    "d"
+    "df = pd.DataFrame(driver_query, columns=[\"forename\", \"surname\", \"wins\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "1a728926-8230-4b8f-9cc2-2e9e5c183898",
    "metadata": {},
    "outputs": [
@@ -269,7 +208,7 @@
    ],
    "source": [
     "name = [data[0] + \" \" + data[1] for data in driver_query]\n",
-    "num_of_1st = [data[3] for data in driver_query]\n",
+    "num_of_1st = [data[2] for data in driver_query]\n",
     "\n",
     "# Create a horizontal bar chart using Matplotlib\n",
     "plt.figure(figsize=(10, 8))\n",
