Updated file structure

--- a/EDA/CSV Upload Notebook.ipynb
+++ b/EDA/CSV Upload Notebook.ipynb
@@ -171,7 +171,7 @@
    ],
    "source": [
     "#CSV import for circuits table\n",
-    "filepath = \"Datasets/circuits.csv\"\n",
+    "filepath = \"../Datasets/circuits.csv\"\n",
     "df_circuits = pd.read_csv(filepath, encoding=\"UTF-8\")\n",
     "df_circuits.head()"
    ]
@@ -302,7 +302,7 @@
    ],
    "source": [
     "#CSV import for drivers table\n",
-    "filepath2 = \"Datasets/drivers.csv\"\n",
+    "filepath2 = \"../Datasets/drivers.csv\"\n",
     "df_drivers = pd.read_csv(filepath2, encoding=\"UTF-8\")\n",
     "df_drivers.head()"
    ]
@@ -414,7 +414,7 @@
    ],
    "source": [
     "#CSV import for standings table\n",
-    "filepath3 = \"Datasets/driver_standings.csv\"\n",
+    "filepath3 = \"../Datasets/driver_standings.csv\"\n",
     "df_standings = pd.read_csv(filepath3, encoding=\"UTF-8\")\n",
     "df_standings.head()"
    ]
@@ -521,7 +521,7 @@
    ],
    "source": [
     "#CSV import for constructor table\n",
-    "filepath4 = \"Datasets/constructors.csv\"\n",
+    "filepath4 = \"../Datasets/constructors.csv\"\n",
     "df_constructor = pd.read_csv(filepath4, encoding=\"UTF-8\")\n",
     "df_constructor.head()"
    ]
@@ -713,7 +713,7 @@
    ],
    "source": [
     "#CSV import for results table\n",
-    "filepath5 = \"Datasets/results.csv\"\n",
+    "filepath5 = \"../Datasets/results.csv\"\n",
     "df_results = pd.read_csv(filepath5, encoding=\"UTF-8\")\n",
     "df_results.head()"
    ]
@@ -912,7 +912,7 @@
    ],
    "source": [
     "#CSV import for races table\n",
-    "filepath6 = \"Datasets/races.csv\"\n",
+    "filepath6 = \"../Datasets/races.csv\"\n",
     "df_races = pd.read_csv(filepath6, encoding=\"UTF-8\")\n",
     "df_races.head()"
    ]
